--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </style>
 </head>
 <body>
-    <h1>¡Mira este modelo en AR!</h1>
+    <h1>¡Bienvenido!</h1>
     <p>Abre esta página en tu teléfono y toca el ícono de AR.</p>
     
     <model-viewer 
-        src="GLB_Planta_Suculenta.glb" 
+        src="GLB_STAND_QR.glb" 
         ar 
         ar-modes="scene-viewer quick-look" 
         camera-controls 
