--- a/index.html
+++ b/index.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Modelo 3D en AR</title>
+    <title>Testa Chile | Modelo en AR</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #f9f9f9;
+        }
+        h1 {
+            color: #6e48aa;
+            margin-bottom: 10px;
+        }
+        p {
+            color: #666;
+            font-size: 18px;
+        }
         model-viewer {
             width: 100%;
-            height: 90vh;
+            height: 70vh;
+            margin: 20px auto;
+        }
+        button[slot="ar-button"] {
+            background: linear-gradient(135deg, #6e48aa 0%, #9d50bb 100%);
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 30px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>¡Bienvenido!</h1>
-    <p>Abre esta página en tu teléfono y toca el ícono de AR.</p>
+<h1>Modelo 3D en Realidad Aumentada V.2.1</h1>
+    <p>¡Decora tu espacio con este diseño en Realidad Aumentada!</p>
     
-    <model-viewer 
-        src="GLB_STAND_QR.glb" 
-        ar 
-        ar-modes="scene-viewer quick-look" 
-        camera-controls 
-        environment-image="neutral" 
-        alt="Modelo 3D en Realidad Aumentada">
-        <button slot="ar-button" style="background: #000; color: #FFF; padding: 10px; border: none; border-radius: 5px;">
-            Ver en AR
-        </button>
+    <model-viewer
+        src="GLB_PSTAN_QR.glb"
+        alt="Stand QR Mediano"
+        loading="eager"
+        shadow-intensity="1"
+        auto-rotate
+        rotation-per-second="50deg"
+        ar
+        ar-modes="scene-viewer quick-look"
+        camera-controls
+        environment-image="neutral"
+        interaction-prompt="none"
+    >
+        <button slot="ar-button">Ver en AR</button>
     </model-viewer>
 </body>
 </html>
