--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p>¡Decora tu espacio con este diseño en Realidad Aumentada!</p>
     
     <model-viewer
-        src="GLB_PSTAN_QR.glb"
+        src="GLB_STAND_QR.glb"
         alt="Stand QR Mediano"
         loading="eager"
         shadow-intensity="1"
