--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Testa Chile | Modelo en AR</title>
+    <title>Testa Chile | Modelo 3D</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
         body {
@@ -37,8 +37,8 @@
     </style>
 </head>
 <body>
-<h1>Modelo 3D en Realidad Aumentada V.2.1</h1>
-    <p>¡Decora tu espacio con este diseño en Realidad Aumentada!</p>
+<h1>Stand QR Pequeño | TESTA CHILE</h1>
+    <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
     
     <model-viewer
         src="GLB_STAND_QR.glb"
@@ -46,7 +46,7 @@
         loading="eager"
         shadow-intensity="1"
         auto-rotate
-        rotation-per-second="50deg"
+        rotation-per-second="60deg"
         ar
         ar-modes="scene-viewer quick-look"
         camera-controls
