--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <h1>Stand QR Pequeño | TESTA CHILE</h1>
     <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
     
-    <model-viewer
+    <model-viewer id="modelo3D"
         src="GLB_Standqr01.glb"
         alt="Stand QR Mediano"
         loading="eager"
