--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         });
        
          document.getElementById("btn-verde").addEventListener("click", function() {
-            modelViewer.src = "GLB_Standqr03.glb";
+            modelViewer.src = "GLB_PlantaSuculentaRoja.glb";
             this.classList.add("active");
             document.getElementById("btn-rojo").classList.remove("active");
             document.getElementById("btn-azul").classList.remove("active");
