--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin-bottom: 10px;
         }
         p {
-            color: #6e48aa;
+            color: #000;
             font-size: 18px;
         }
         model-viewer {
