--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             text-align: center;
             background: #f9f9f9;
         }
-        h1 {
-            color: #000;
-            margin-bottom: 10px;
+        h1 { 
+            color: #000; //color titulo
+            margin-bottom: 5px; // margen del titul con respecto al subtitulo
+            font-size: 20px; // tamaño titulo
         }
         p {
-            color: #000;
-            font-size: 18px;
+            color: #000; //color subtitulo
+            font-size: 18px; //tamaño subtitulo
         }
         model-viewer {
             width: 100%;
