--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         }
         h1 { 
             color: #000; //color titulo
-            margin-bottom: 5px; // margen del titul con respecto al subtitulo
+            margin-bottom: 5px; // margen del titulo con respecto al subtitulo
             font-size: 20px; // tamaño titulo
         }
         p {
             color: #000; //color subtitulo
-            font-size: 18px; //tamaño subtitulo
+            font-size: 25px; //tamaño subtitulo
         }
         model-viewer {
             width: 100%;
