--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             margin-bottom: 5px; // margen del titulo con respecto al subtitulo
             font-size: 20px; // tamaño titulo
         }
-        p {
+        h2 {
             color: #000; //color subtitulo
-            font-size: 65px; //tamaño subtitulo
+            font-size: 20px; //tamaño subtitulo
         }
         model-viewer {
             width: 100%;
@@ -61,7 +61,7 @@
 </head>
 <body>
 <h1>Stand QR Pequeño | TESTA CHILE</h1>
-    <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
+    <h2>Visualiza tu pedido en 3D y en Realidad Aumentada</h2>
     
     <model-viewer id="modelo3D"
         src="GLB_Standqr01.glb"
