--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         h2 {
             color: #000; //color subtitulo
-            font-size: 20px; //tamaño subtitulo
+            font-size: 17px; //tamaño subtitulo
         }
         model-viewer {
             width: 100%;
@@ -42,21 +42,21 @@
             gap: 15px;
             margin: 20px 0;
         }
-        .texture-btn {
-            background: #e0e0e0;
-            color: #333;
-            border: 2px solid #6e48aa;
-            padding: 10px 20px;
-            border-radius: 30px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: all 0.3s;
+    .texture-btn {
+        background: white; /* Fondo blanco cuando está inactivo */
+        color: #000; /* Texto negro */
+        border: 2px solid #000; /* Borde negro */
+        padding: 10px 20px;
+        border-radius: 30px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: all 0.3s;
         }
-        .texture-btn.active {
-            background: #6e48aa;
-            color: white;
-            border-color: #6e48aa;
-        }
+    .texture-btn.active {
+        background: #000; /* Fondo negro cuando está activo */
+        color: white; /* Texto blanco */
+        border-color: #000; /* Borde negro */
+    }
     </style>
 </head>
 <body>
