--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin-bottom: 5px; // margen del titulo con respecto al subtitulo
             font-size: 20px; // tamaño titulo
         }
-        h2 {
+        p {
             color: #000; //color subtitulo
             font-size: 10px; //tamaño subtitulo
         }
@@ -61,7 +61,7 @@
 </head>
 <body>
 <h1>Stand QR Pequeño | TESTA CHILE</h1>
-    <h2>Visualiza tu pedido en 3D y en Realidad Aumentada</h2>
+    <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
     
     <model-viewer id="modelo3D"
         src="GLB_Standqr01.glb"
