--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             background: #f9f9f9;
         }
         h1 { 
-            color: #000; //color titulo
-            margin-bottom: 5px; // margen del titulo con respecto al subtitulo
-            font-size: 20px; // tamaño titulo
+            color: #000;
+            margin-bottom: 5px;
+            font-size: 20px;
         }
         p {
-            color: #000; //color subtitulo
-            font-size: 10px; //tamaño subtitulo
+            color: #000;
+            font-size: 10px;
         }
         model-viewer {
             width: 100%;
@@ -35,53 +35,59 @@
             cursor: pointer;
             margin: 10px;
         }
-     /* ESTILOS PARA LOS BOTONES DE TEXTURAS */
         .texture-buttons {
             display: flex;
             justify-content: center;
             gap: 15px;
             margin: 20px 0;
         }
-    .texture-btn {
-        background: white; /* Fondo blanco cuando está inactivo */
-        color: #000; /* Texto negro */
-        border: 2px solid #000; /* Borde negro */
-        padding: 10px 20px;
-        border-radius: 30px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: all 0.3s;
+        .texture-btn {
+            background: white;
+            color: #000;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            border-radius: 30px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: all 0.3s;
         }
-    .texture-btn.active {
-        background: #000; /* Fondo negro cuando está activo */
-        color: white; /* Texto blanco */
-        border-color: #000; /* Borde negro */
-    }
+        .texture-btn.active {
+            background: #000;
+            color: white;
+            border-color: #000;
+        }
         .logo-container {
-    position: fixed; /* Fijo al hacer scroll */
-    top: 15px;
-    left: 15px;
-    z-index: 1000; /* Asegura que esté por encima de todo */
-}
-
-.logo-img {
-    width: 120px; /* Ajusta según necesidad */
-    height: auto; /* Mantiene proporción */
-    transition: transform 0.3s ease; /* Efecto hover opcional */
-}
-
-.logo-img:hover {
-    transform: scale(1.05); /* Pequeño zoom al pasar el mouse */
-}
+            position: fixed;
+            top: 15px;
+            left: 15px;
+            z-index: 1000;
+            background: transparent;
+        }
+        .logo-img {
+            width: 80px;
+            height: auto;
+            transition: transform 0.3s ease;
+            background: transparent;
+        }
+        .logo-img:hover {
+            transform: scale(1.05);
+        }
+        .logo-container a {
+            display: inline-block;
+            text-decoration: none;
+            border: none;
+        }
     </style>
 </head>
 <body>
-     <!-- Contenedor del logo (absoluto) -->
+    <!-- Contenedor del logo con enlace -->
     <div class="logo-container">
-        <img src="Logo01_Color_MEDRES.png" alt="Logo Testa Chile" class="logo-img">
+        <a href="https://www.google.cl" target="_blank">
+            <img src="Logo01_Color_MEDRES.png" alt="Logo Testa Chile" class="logo-img">
+        </a>
     </div>
     
-<h1>Stand QR Pequeño | TESTA CHILE</h1>
+    <h1>Stand QR Pequeño | TESTA CHILE</h1>
     <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
     
     <model-viewer id="modelo3D"
