--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         h1 { 
             color: #000;
             margin-bottom: 5px;
-            font-size: 20px;
+            font-size: 30px;
         }
         p {
             color: #000;
-            font-size: 10px;
+            font-size: 20px;
         }
         model-viewer {
             width: 100%;
@@ -82,7 +82,7 @@
 <body>
     <!-- Contenedor del logo con enlace -->
     <div class="logo-container">
-        <a href="https://www.google.cl" target="_blank">
+        <a href="https://www.instagram.com/testa.cl/" target="_blank">
             <img src="Logo01_Color_MEDRES.png" alt="Logo Testa Chile" class="logo-img">
         </a>
     </div>
