--- a/index.html
+++ b/index.html
@@ -77,16 +77,6 @@
             text-decoration: none;
             border: none;
         }
-            .progress-bar {
-        height: 4px;
-        background: linear-gradient(to right, #6e48aa, #9d50bb);
-        transform-origin: left;
-        animation: load 1.5s infinite;
-    }
-    @keyframes load {
-        0% { transform: scaleX(0); }
-        100% { transform: scaleX(1); }
-    }
     </style>
 </head>
 <body>
@@ -100,9 +90,7 @@
     <h1>Stand QR Pequeño | TESTA CHILE</h1>
     <p>Visualiza tu pedido en 3D y en Realidad Aumentada</p>
     
-    <model-viewer id="modelo3D" loading="eager" reveal="auto">
-    <div slot="progress-bar" class="progress-bar"></div>
-    </model-viewer>
+    <model-viewer id="modelo3D"
         src="GLB_Standqr01.glb"
         alt="Stand QR Mediano"
         loading="eager"
