--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
     <title>Testa Chile | Modelo 3D</title>
+    <!-- Polyfill para navegadores antiguos -->
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.8.0/webcomponents-loader.js"></script>
+    <!-- Versión fija de model-viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer@2.1.1/dist/model-viewer.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             margin: 0;
@@ -24,6 +28,7 @@
             width: 100%;
             height: 70vh;
             margin: 20px auto;
+            position: relative;
         }
         button[slot="ar-button"] {
             background: linear-gradient(135deg, #6e48aa 0%, #9d50bb 100%);
@@ -77,6 +82,26 @@
             text-decoration: none;
             border: none;
         }
+        /* Estilos para el tooltip de descripción */
+        .model-description {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 20px;
+            font-size: 16px;
+            opacity: 0;
+            transition: opacity 0.3s;
+            pointer-events: none;
+            max-width: 80%;
+            text-align: center;
+        }
+        model-viewer:hover .model-description {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -98,12 +123,16 @@
         auto-rotate
         rotation-per-second="60deg"
         ar
-        ar-modes="scene-viewer quick-look"
+        ar-modes="webxr scene-viewer quick-look"
         camera-controls
         environment-image="neutral"
         interaction-prompt="none"
+        xr-environment
     >
         <button slot="ar-button">Ver en AR</button>
+        <div class="model-description" id="model-description">
+            Opción A: Base metálica con acabado en pintura epóxica color azul.
+        </div>
     </model-viewer>
 
     <!-- Botones de selección de textura -->
@@ -114,30 +143,46 @@
     </div>
 
     <script>
-   document.addEventListener("DOMContentLoaded", function() {
-        const modelViewer = document.getElementById("modelo3D");
+        document.addEventListener("DOMContentLoaded", function() {
+            const modelViewer = document.getElementById("modelo3D");
+            const description = document.getElementById("model-description");
 
-        document.getElementById("btn-azul").addEventListener("click", function() {
-            modelViewer.src = "GLB_Standqr01.glb";
-            this.classList.add("active");
-            document.getElementById("btn-rojo").classList.remove("active");
-            document.getElementById("btn-verde").classList.remove("active");
-        });
+            // Configuración específica para iOS
+            if (navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
+                modelViewer.arModes = 'quick-look';
+            }
 
-        document.getElementById("btn-rojo").addEventListener("click", function() {
-            modelViewer.src = "GLB_Standqr02.glb";
-            this.classList.add("active");
-            document.getElementById("btn-azul").classList.remove("active");
-            document.getElementById("btn-verde").classList.remove("active");
+            // Textos descriptivos para cada modelo
+            const descriptions = {
+                azul: "Opción A: Base metálica con acabado en pintura epóxica color azul.",
+                rojo: "Opción B: Base metálica con acabado en pintura epóxica color rojo.",
+                verde: "Opción C: Base metálica con acabado en pintura epóxica color verde."
+            };
+
+            document.getElementById("btn-azul").addEventListener("click", function() {
+                modelViewer.src = "GLB_Standqr01.glb";
+                description.textContent = descriptions.azul;
+                this.classList.add("active");
+                document.getElementById("btn-rojo").classList.remove("active");
+                document.getElementById("btn-verde").classList.remove("active");
+            });
+
+            document.getElementById("btn-rojo").addEventListener("click", function() {
+                modelViewer.src = "GLB_Standqr02.glb";
+                description.textContent = descriptions.rojo;
+                this.classList.add("active");
+                document.getElementById("btn-azul").classList.remove("active");
+                document.getElementById("btn-verde").classList.remove("active");
+            });
+           
+            document.getElementById("btn-verde").addEventListener("click", function() {
+                modelViewer.src = "GLB_Standqr03.glb";
+                description.textContent = descriptions.verde;
+                this.classList.add("active");
+                document.getElementById("btn-rojo").classList.remove("active");
+                document.getElementById("btn-azul").classList.remove("active");
+            });
         });
-       
-         document.getElementById("btn-verde").addEventListener("click", function() {
-            modelViewer.src = "GLB_Standqr03.glb";
-            this.classList.add("active");
-            document.getElementById("btn-rojo").classList.remove("active");
-            document.getElementById("btn-azul").classList.remove("active");
-        });
-    });
     </script>
 </body>
 </html>
