--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- Contenedor del logo con enlace -->
     <div class="logo-container">
         <a href="https://www.instagram.com/testa.cl/" target="_blank">
-            <img src="Logo01_Color_MEDRES.png alt="Logo Testa Chile" class="logo-img">
+            <img src="WEB_LogoTestaChile.png" alt="Logo Testa Chile" class="logo-img">
         </a>
     </div>
     
