--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     >
         <button slot="ar-button">Ver en AR</button>
         <div class="model-description" id="model-description">
-            Opción A: Base metálica con acabado en pintura epóxica color azul.
+            (1) Soporte acrílico de 3mm de espesor, texto y logo grabado. Tipo de texto 1
         </div>
     </model-viewer>
 
@@ -239,9 +239,9 @@
 
             // Textos descriptivos para cada modelo
             const descriptions = {
-                azul: "Opción A: Base metálica con acabado en pintura epóxica color azul.",
-                rojo: "Opción B: Base metálica con acabado en pintura epóxica color rojo.",
-                verde: "Opción C: Base metálica con acabado en pintura epóxica color verde."
+                azul: "(1) Soporte acrílico de 3mm de espesor, texto y logo grabado. Tipo de texto 1.",
+                rojo: "(2) Soporte acrílico de 3mm de espesor, texto y logo grabado. Tipo de texto 2.",
+                verde: "(3) Soporte acrílico de 3mm de espesor, texto y logo grabado. Tipo de texto 3."
             };
 
             document.getElementById("btn-azul").addEventListener("click", function() {
