--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
         </a>
     </div>
     
-    <h1>Stand QR Pequeño | TESTA CHILE</h1>
+    <h1>ÚLTIMO DISEÑO | TESTA CHILE</h1>
     <div class="description">
-        Explora tu modelo 3D o actívalo en Realidad Aumentada 
+        Este es nuestro último diseño, ¡pruébalo en tu espacio con AR!
+        Explora el modelo 3D o actívalo en Realidad Aumentada 
         tocando <strong>'Ver en AR'</strong> (móvil) o pasando el cursor sobre él (desktop) 
         para verlo en tu entorno real.
     </div>
