--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     
     <h1>ÚLTIMO DISEÑO | TESTA CHILE</h1>
     <div class="description">
-        Este es nuestro último diseño, ¡pruébalo en tu espacio con AR!
+        <strong>Este es nuestro último diseño, ¡pruébalo en tu espacio con AR!</strong> 
         Explora el modelo 3D o actívalo en Realidad Aumentada 
         tocando <strong>'Ver en AR'</strong> (móvil) o pasando el cursor sobre él (desktop) 
         para verlo en tu entorno real.
