--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     >
         <button slot="ar-button" class="ar-button">Ver en AR</button>
         <div class="floating-description">
-            <strong>Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor.
+            <strong>[1] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 1.
         </div>
     </model-viewer>
 
@@ -290,9 +290,9 @@
 
             // Textos descriptivos para cada modelo
             const descriptions = {
-                uno: "<strong>Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 1.",
-                dos: "<strong>Medidas: 16cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 2.",
-                tres: "<strong>Medidas: 20cm de alto, 10cm de ancho, 7cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 3."
+                uno: "<strong>[1] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 1.",
+                dos: "<strong>[2] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 2.",
+                tres: "<strong>[3] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 3."
             };
 
             document.getElementById("btn-uno").addEventListener("click", function() {
