--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             border: 2px solid #000 !important;
             padding: 10px 24px !important;
             border-radius: 0 !important;
-            font-size: 14px !important;
+            font-size: 10px !important;
             font-family: Arial, sans-serif !important;
             margin: 10px !important;
             transition: all 0.3s !important;
@@ -123,7 +123,7 @@
 
         .ar-hint {
             display: block;
-            font-size: 11px;
+            font-size: 10px;
             margin-top: 4px;
             color: #666;
             font-family: Arial, sans-serif;
@@ -272,8 +272,8 @@
         <button class="social-btn instagram" onclick="window.open('https://www.instagram.com/testa.cl/', '_blank')">
             Instagram
         </button>
-        <button class="social-btn catalog" onclick="window.open('https://google.cl', '_blank')">
-            Catálogo
+        <button class="social-btn catalog" onclick="window.open('https://testachile.github.io/Muestrario3D/', '_blank')">
+            Muestrario 3D
         </button>
         <button class="social-btn whatsapp" onclick="window.open('https://wa.me/56953706307', '_blank')">
             WhatsApp
