--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
                 {
                     id: 'uno',
                     label: 'Opción A',
-                    src: 'GLB_Standqr01.glb',
-                    description: '<strong>[1] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 1.'
+                    src: 'GLB_StandQR_Mediano_JAIROZ.glb',
+                    description: '<strong>[1] Medidas: 17cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Tipo y logotipo grabado sobre el acrílico.'
                 },
                 {
                     id: 'dos',
