--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     id: 'uno',
                     label: 'Opción A',
                     src: 'GLB_StandQR_Mediano_JAIROZ.glb',
-                    description: '<strong>[1] Medidas: 17cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Tipo y logotipo grabado sobre el acrílico.'
+                    description: '<strong>Medidas: 17cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Tipo y logotipo grabado sobre el acrílico.'
                 },
                 {
                     id: 'dos',
