--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </div>
     
     <model-viewer id="modelo3D"
-        src="GLB_Standqr01.glb"
+        src="GLB_SANTORRINO.glb"
         alt="Stand QR Mediano"
         loading="eager"
         shadow-intensity="1"
@@ -323,8 +323,8 @@
                 {
                     id: 'uno',
                     label: 'Opción A',
-                    src: 'GLB_StandQR_Mediano_JAIROZ.glb',
-                    description: '<strong>Medidas: 17cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Tipo y logotipo grabado sobre el acrílico.'
+                    src: 'GLB_SANTORRINO.glb',
+                    description: '<strong>Medidas: 12cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Logo, textos y código QR grabados y pintado con acrílico blanco.'
                 },
                 {
                     id: 'dos',
