--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <span class="ar-hint">(Coloca en una superficie plana)</span>
         </button>
         <div class="floating-description" id="model-description">
-            <strong>[1] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 1.
+            <strong>Medidas: 12cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Logo, textos y código QR grabados y pintado con acrílico blanco.
         </div>
     </model-viewer>
 
