--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <span class="ar-hint">(Coloca en una superficie plana)</span>
         </button>
         <div class="floating-description" id="model-description">
-            <strong>Medidas: 12cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Logo, textos y código QR grabados y pintado con acrílico blanco.
+            <strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letrase</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización..
         </div>
     </model-viewer>
 
@@ -335,19 +335,19 @@
                     id: 'uno',
                     label: 'Opción 1',
                     src: 'GLB_Letrero_CREESIENTE_Modelo01.glb',
-                    description: '<strong>Medidas: 12cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico negro plegado, 3mm de espesor. Logo, textos y código QR grabados y pintado con acrílico blanco.'
+                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letrase</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.
                 },
                 {
                     id: 'dos',
                     label: 'Opción 2',
                     src: 'GLB_Letrero_CREESIENTE_Modelo02.glb',
-                    description: '<strong>[2] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 2.'
+                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letrase</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.
                 },
                 {
                     id: 'tres',
                     label: 'Opción 3',
                     src: 'GLB_Letrero_CREESIENTE_Modelo03.glb',
-                    description: '<strong>[3] Medidas: 10cm de alto, 8cm de ancho, 5cm de base</strong> Soporte acrílico de 3mm de espesor. Tipo de texto 3.'
+                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letrase</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.
                 }
             ]
         };
