--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!-- Contenedor del logo con enlace -->
     <div class="logo-container">
         <a href="https://www.instagram.com/testa.cl/" target="_blank">
-            <img src="WEB_LogoTestaChileBW.png" alt="Logo Testa Chile" class="logo-img">
+            <img src="Logo_InteligenciaArtificial_01.png" alt="Logo Testa Chile" class="logo-img">
         </a>
     </div>
     
