--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
     
     <model-viewer id="modelo3D"
-        src="GLB_Letrero_CREESIENTE_Modelo01.glb"
+        src="GLB_Cycloservice_opcion01"
         alt="Stand QR Mediano"
         loading="eager"
         shadow-intensity="1"
@@ -312,7 +312,7 @@
             <span class="ar-hint">(Coloca en una superficie plana)</span>
         </button>
         <div class="floating-description" id="model-description">
-            <strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letras</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.'
+            <strong>Medidas: </strong>'
         </div>
     </model-viewer>
 
@@ -323,13 +323,13 @@
     <div class="footer">
         Testa Chile 2025<br>
         abaezajordan@gmail.com<br>
-        Medios de pago: Transferencia electrónica y efectivo, emitimos boleta y factura
+        Medios de pago: Transferencia electrónica y efectivo. Emitimos boleta y factura
     </div>
 
     <script>
         // CONFIGURACIÓN - Aquí defines cuántas opciones mostrar y sus detalles
         const modelOptions = {
-            totalOptions: 3, // Cambia este valor para mostrar 1, 2 o 3 opciones
+            totalOptions: 1, // Cambia este valor para mostrar 1, 2 o 3 opciones
             models: [
                 {
                     id: 'uno',
