--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
     
     <model-viewer id="modelo3D"
-        src="GLB_Cycloservice_opcion01.glb"
+        src="GLB_SANTORRINO.glb"
         alt="Stand QR Mediano"
         loading="eager"
         shadow-intensity="1"
