--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </div>
     
     <model-viewer id="modelo3D"
-        src="GLB_SANTORRINO.glb"
+        src="GLB_Cycloservice_opcion01.glb"
         alt="Stand QR Mediano"
         loading="eager"
         shadow-intensity="1"
@@ -334,8 +334,8 @@
                 {
                     id: 'uno',
                     label: 'Opción 1',
-                    src: 'GLB_Letrero_CREESIENTE_Modelo01.glb',
-                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letras</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.'
+                    src: 'GLB_Cycloservice_opcion01.glb',
+                    description: '<strong>Medidas: </strong> Hecho en '
                 },
                 {
                     id: 'dos',
