--- a/index.html
+++ b/index.html
@@ -335,19 +335,19 @@
                     id: 'uno',
                     label: 'Opción 1',
                     src: 'GLB_Cycloservice_opcion01.glb',
-                    description: '<strong>Medidas: </strong> Hecho en '
+                    description: '<strong>Medidas 55cm de largo, 52cm de alto</strong> Base terciado de madera, terminación laca transparente. Texto grabado (para códigos QR). Acrílico para Logo y bibicleta (color blanco, negro y plateado).'
                 },
                 {
                     id: 'dos',
                     label: 'Opción 2',
-                    src: 'GLB_Letrero_CREESIENTE_Modelo02.glb',
-                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letras</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.'
+                    src: 'GLB_Cycloservice_opcion02.glb',
+                    description: '<strong>Medidas 55cm de largo, 52cm de alto</strong> Base terciado de madera, terminación laca transparente. Texto grabado (para códigos QR). Acrílico para Logo y bibicleta (color blanco, negro y plateado).'
                 },
                 {
                     id: 'tres',
                     label: 'Opción 3',
-                    src: 'GLB_Letrero_CREESIENTE_Modelo03.glb',
-                    description: '<strong>Medidas: 23cm de largo (letras), 17cm alto (desde tope superior luna, hasta tope inferior letras</strong> Hecho en acrílico, 6mm de espesor. Se adhiera a muro con cinta de Doble Faz. Color según personalización.'
+                    src: 'GLB_Cycloservice_opcion03.glb',
+                    description: '<strong>Medidas 55cm de largo, 52cm de alto</strong> Base terciado de madera, terminación laca transparente. Texto grabado (para códigos QR). Acrílico para Logo y bibicleta (color blanco, negro y plateado).'
                 }
             ]
         };
