--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 {
                     id: 'tres',
                     label: 'Opción 3',
-                    src: 'GLB_Cycloservice_opcion03.glb',
+                    src: 'GLB_QRmama.glb',
                     description: '<strong>Medidas 55cm de largo, 52cm de alto</strong> Base terciado de madera, terminación laca transparente. Texto grabado (para códigos QR). Acrílico para Logo y bibicleta (color blanco, negro y plateado).'
                 }
             ]
